--- a/AcousticFWI/Acoustic3D.ipynb
+++ b/AcousticFWI/Acoustic3D.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -111,29 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAACFEAAAAVBAMAAAB2q/46AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAMmYiu80QdonvRN2Z\nVKvu110NAAANmElEQVR4Ae1cf4xcVRU+O7M7O53d2U78Q2NMyiAqEk0ZSROFpLJaEyTRskRXI60w\nQUghajsSZDFW2BAQDY1do4BBEjZoAkmN20iwNAY7Rht/BGH9HYMJg4KYkNBBWwiNtZ5z7z333Pfe\nve/dnZ3d8EfvH/eed9+93/m+c859nXmzKcCZdiYCZyJwJgLFERhpmjXWMNcrG0qN0Poo3LNDu+EN\nwTtRN8LAMbzCqgblFeZzRmhUQiEcwddbRlFPTFJzikxHJA8kHI24aMZ5UF62MKI1eGJl47Oh5VG4\nU6EHTXlacK/5rtixVhAYongFVSGvyqUHY1nIuiAfV6gsj/cRBF69UKED8SkI8vELFR9FkoPAQxW6\nSj7lfV/7O0IUadVenhVn1tp8ehnt8dc+WgASjoaFIsOftxtPb3/pxRMRHpSXTzCiNXhiBeNnWzAW\nWl6MW3kEYCawfazt3Njp2DFmHjAU88pTRbzGujEknDV5fBJCZU+cjzzgIQgVOhCXgjw+AaHiI09y\nHvBwha6Ozx0NmMKSLtQKECqyY/PIYNNJ7PJBQgdH+CvLnzd8SsDbYjygl/F5A2kNcx0zVFpm1TMO\nUGpjBG69D3BzahtfJuZP8ax1zBP+MQ84gleOKsV34zK7HQKfhFDGBRAfn5HJjLXGQh1/NgUwKJ+A\nUPEhkrNhXT+hPj5ZyQE+104DVO4PV7WAQ6DIyuf1cNFmPBnBo6FBCsOpl0ne9LXqa6/i8LkYD+hl\nAx92azhIRWa9Y1YcxcAs+FdH4E7OAFzv3w3fcuZrr/CFdcwT/jEPOIJXjirFa6nNbofAxxXKsDiK\nj784s2lzjYWKO0kBDMonIFR8iORsWNdNqNDJTUGAzw7afgwS1esgumagyEpb8FCUrp/GpfkBCx0c\n1weAkzfnRvVlvNgV4wG9HOCN1uCJiNFm8jFc/Gn/hgjciXn8ALTs3V476ExX7YV17Nz1mDnAItyz\nz0zlqFK87rJbV88nIdTiAoiPvJO5xkKFj6Qg90mRwyckVHyI5GxYc4CHkVEh4VjCJ5sCP58qfWmA\n/Y1irQCBIpucXAC46OIOHnJb9Q4nMQMHRxYoy8mbc2esD1Uox3hAL/uQyu3vmfsnGbDrlotuRm7Y\nrvsllO9RFhy4b6SpLe6rc2dr02Sy9tzxF0AB8Ao1Cm5l7h8P3anmKvs6cGFb3z68qF/q/vCy7R2o\ndtWk0z287U23tBPTY789d5tewCU0ELDwytUbUAXCa+fvb2wNgY8ACh8bB/FhynQFERyWUIkySAr4\nSbECPj6hTqGxZpHMaa4VlEqBUN5emFER6qgC4cNPCgaEQOlePENanlpU1StJdbTyoQpRgsnxPkDn\n/Aaok+ElplkkTogOoT2fHFH8h9geHZnDr7bTcANeE0SBB1zyQVw49TjcTkZlvnRoQomE+b8CUcVW\nuWTvk8qQ7nL4iL7gTNK3NXi7LNCWxYXr4F2dR9Vktb4At+rb18w90dMWflWDkvarJ1Q//+JydXq0\n6czs+Ri8pC/Z8UDAlleBXr8qsLwqJ1pTvSHwEUCJP6t2fJgyXUEEhyVUogySAn5SrICPT6gUmkcy\np7moVPKFgt1elFER6qjKpkAA6S2Dp3T3N0nMZQ2q3sGKDC6ovwz19jGEIRAvMS0re3DAnk/cbZqT\nN57CcenKF/+DQ4QH9PI4wNaxHpxPRrVdfaXeIqTy8lEYnSYLKlDuKcN25T68UV9wJifpmD9tFxjD\n4sJXYX/7D2p2Ky79kL7fhvebhUdxrB80FzyUl6+EUn9ima9xfKbBe9nxIMDRev2qhBfm0sQIVsNH\nACX+VrTjwzwp4iM4NKESZScF/KSI5+MT6hQaa3Ykc1gLSqVAKNjtRRkVoY4qhw9/prCA4C1dOKIO\n0WtA1StJdbTKofJTAjinfAo+D9/GoBCIl5hmkTk4IOeTQ+oeHZmj70fqN8cID+jlPoA2vmze30aj\nAmPTGqgC98LGjgHdZMZrf0Ltcqi89hszw5mkb2twlpm0g8XFVH3czLY3dOBVY4/0jEFf1Ub65oKH\nCpyC6isbFpHWDvL7aIPScq++zY4HAY7W61clvDDJqEa11fARQIk/cKwdH6ZM4yM4NKESZScF/KSI\n5+MT6hSaRzKHFfJLpVAoby/KqAh1VGVTgNXa03lXbxkypQun6W79VVDVm3+o/JQAunhMOmU6KgTi\nJaZZZL3L+SQausnR4RkaryI/jRgP6AUfEPRy91JlyNMB35We1dCgta4epf/+6Wm8qM7O7rh7draL\n5p5F7DJPCgfXPh1wboReuFL7gR6gchKNrGCkMLpAYbLtMSjTXscxDALs8LJPQ5/egCrLC5N8McVo\ntXwsIH5xNE8eK5l93DE7e3h2Vv0oHh/BYQl1omxSAAPx8Ql1Am9Es2Q3rAWlUiDUVlpRRh2hEmXm\n40i2gIHSPUxSJg6qI+gk1dFqD1WAEp7g++utEpW7PgL8zytKTR6g7MEBfT5NOPXAeUtMwnF8BlU6\nMR7QC37pwPfrlf8qg54ObQWGD9IvGdS/mdEOW2EXfbvBxs/8Jag4v6Loe9gLLorDFdSOwviCtupd\nPUKtj06zb3irB2FPlz4YccO0VBc0DDuGQYAdXrl6A6osL0zy1024VsXHAuLTluPPmh0f5jPFCiI4\nLKESZScF/JliBXx8Qp1CM5odyRzWolIpEGq3F2VUhDqqHD6cAgtY85fuMZJya0N9cXCS6mi1hypA\nqdyE2athio7KBB2BcJ1nD46cT6Khmps3nsOfMujxU23HeEAv+CIT/+6udA8Z9fatMN5WSKM92K4M\nwKhMaYv7TwH0zb2OHu+A33neaFpc+PN4H27SS7cDQquGwdJWdabe8LwWGuvCee3Rpl5MfakPG+bf\noa65hAYCtrwK9AZUWV7nA3yn1F49Hwvo8FGo2Dk+uEzjIzgsoRJlJwX2SRHPxyd01BaaRzKnuahU\n8oWC3V6UURGK1Y/MVPOkwAIGSndp8X1fGPmmflXoJFW0yqEKUCq14Nf4j/00MqAj4CWmWWTfaMr5\nVPypc/NmJ0H9OQW+W4jwgF6+gRuPw5sbZCwtXwYXQIX+xHNyuvZvbb3lnedeoS128QEYN08IzuST\n+BEGnkiucnBrp0b7+JDcM4Nzv4AlbY386LYvLmpfvV3osKvvsxP6CQeDXe3JxNQMbFycV9fGcRhY\ngU0aYOVFcGL1GlVBXs8DnKxq2EI+UUKd+DNbxwc/KZIRXAehTpSdFNgnRZLPSoVKoXkkm7CqUhlc\nqFRaQUYdoVKnkE2BAHKFqdJmAfj3yj/uVje38N/rXuGhChydCfWZ5Cw6ZwjiJaaj4jk46nwmGem8\npc/BRB8/V+ADrdgDeTmAi0/e+XP15WH33K7bmgBH2vgW8V978RsGWd3S3YvaAtPee8NXjMVPii1z\nOHFFcpWDW3nhppvfih+j6E8sd9/5VEtZk3Ce2VG+BAMytqjv4xLTlh7e20p8KcFHX/VX+qZxnANM\nzhhY6WBYh1eBXlaleMt2yws/he2bj+VDoWQ+IUCHD7tzfPCTIhXBtRfqRNlJgX1SpPisUKgUmkey\nSbMulYGFSqUVZNQRKnVKH7Y5zSYFAhjIKGz68JcX8VUhfTNwkipa5VAxJQqbtKkHDmF8//jAT3EW\nQbzENAsYyxwcdT6TNWbylnSy+6r/vfTckZkYD8pLC6qoB89xi3pqNWVNEkRqTt+X3mRSTZQX3PU0\nlcaF76mFR7HXFhrWw4XurFp3l+ofUX26cx3jPQ+wdUHA1ovCSfPK00uqLJTajd+JqSV5FfOxFIqF\n2qXaH/f8pKB3PS4njuWaC2VHhlCAj2UfKzRZaKxWjcmwsv91EpqMsuIjkvEyRyjeHV0uNdwq0auT\nWhkhe3SUN+6k1Hx1ng2z3sfRYhQa2aE7R3axB/RS6sJYl1ajYVoJx+fV7xlk6SYWz9BYa8pVtYMY\ncolWGhdw9dSMel2Mlm52B/0JZ9NM6mGnGt6dmOML1zHONbPAFoyArRe1P82L7ob0kioLpXbjd2Jq\nSV7FfCyFYqF2qfbH/YPaSEfQsltzoU1moscAH8s+Tmg68AkfybCy//UQmomy4mUka445QnHBaO9P\n2EuV0Oq0VkbIHh3twfQC0vTUeTbMehuuzTR2mL5R7IG8bIM9y2rnNt5/NRqH4BLsydJNLJ5Jj9fi\nRHJVGrfSxE8unVE8e2TpxjsqM+4s3aucUitGW3phXu8DZhcEXMCLOIT0kiqG0hQiePn4rEAoL9X+\n0n06gsxuzYWyoxShNB9mH5FRX+BT6M4l+18XoWlVDg82w0JpxeRp+oVTqtenlRGyR4d9qNGC+Ooq\nG2a9l6OVQGKHiUm8KPZAp2hL/cgn1U77P7s08fKhvQ3sydKtyUZwpAdNYlUGt4QranM/w54s3Zpm\nJK4yS5NPn+jQUJ6mPr/5gBlMBaHp7s/worshvaSKoTRIBC8fH3JCLUJoUy0MdekIMrs1F8qOUsTS\nfJh9pNB04FPoziX7XxehaVUODzabxsgKpRsjh5exl+pt4lVaK81RyxwdPc29BfHVld97umgNVJMh\nU2OhBxXzMm+3Rgom7hJ/1gm0KNxzApsBf4xZVQsDx/AKqxqUV5jPGaFxiQ5H8PWWUdQTk9ScItMR\nyQMJRyMumnEe0Mv/AcxRqmt4rpGoAAAAAElFTkSuQmCC\n",
-      "text/latex": [
-       "$$\\left ( p{\\left (x,y,z,- s + t \\right )}, \\quad p{\\left (x,y,z,t \\right )}, \\quad p{\\left (- h + x,y,z,t \\right )}, \\quad p{\\left (x,y,z,t \\right )}, \\quad p{\\left (h + x,y,z,t \\right )}, \\quad p{\\left (x,- h + y,z,t \\right )}, \\quad p{\\left (x,y,z,t \\right )}, \\quad p{\\left (x,h + y,z,t \\right )}, \\quad p{\\left (x,y,- h + z,t \\right )}, \\quad p{\\left (x,y,z,t \\right )}, \\quad p{\\left (x,y,h + z,t \\right )}, \\quad Q{\\left (x,y,z,t \\right )}, \\quad M{\\left (x,y,z \\right )}, \\quad s, \\quad h, \\quad E{\\left (x,y,z \\right )}\\right )$$"
-      ],
-      "text/plain": [
-       "(p(x, y, z, -s + t), p(x, y, z, t), p(-h + x, y, z, t), p(x, y, z, t), p(h + x\n",
-       ", y, z, t), p(x, -h + y, z, t), p(x, y, z, t), p(x, h + y, z, t), p(x, y, -h +\n",
-       " z, t), p(x, y, z, t), p(x, y, h + z, t), Q(x, y, z, t), M(x, y, z), s, h, E(x\n",
-       ", y, z))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "arglamb=[]\n",
     "arglamba=[]\n",
@@ -163,7 +145,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABtUAAAAVBAMAAADLM3xHAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAdt3NMolEuyKrEFRm\n75lkIG3zAAAMvklEQVR4Ae1bb4hcVxU/u7MzOzszye5GgrRqsk2tBGrJmg1VK8ax3xSluy1YKjHZ\nFooV1N2oYILGjKAGSUq2Rmm3UDKxlFqIZi1+KEXNVCuEYs3WaqP1y0isWsR208REkmo859577r3v\nvXPvezsb/JQLffe8++d3fud3z5l58zYFuNquKnBVgf+LAmu2GDcfW5G7Z4O7BzrBKTvRaFozbayM\nFoR59QgcBiwSaDo67z6sQY/AYUDoMXZmG9agR+AwILosEn4kVk06RizqnWPO7XM8NDZPwycMSHU2\nFy22YKgZmt0XmvDHv+vf+LZHq7ZnzJ8pZgd5EfDjvy0G4q8KAoIY6DJIBzVIAhcnHQT0RPVDs3ae\ni6AGIeA8FWTAb75yVwc5JcO3JJOGFGvj8CVatP7UAoSIKRDZexIf7+Qg+vZemJ/fNJ7voexqrdTO\ngBceqG0EGA+tviU0Yce/34KSvUkZPq1SNzWZdxvjpYC35iGk5mOAIAdakHRMgxRwMdIxQF/UVIT6\nNuYipkEQOKZCCLC8BeAQ8kmFLxAOxTr0L1w8cHgaIEhMoQVzN+lLDmIYdzdm8z2UXa2tTeIWuvuB\nWVVfAgjt75vMhToOEFzlww4vMFStxVa0j/FSwOpzjyCuAGAghIKkIxqkgS1pYP0lESKAwbOyODEX\nuaJaFM+IqRAArL0X9/+wG04NBx+K9cAfcU3jMF78NHL72IrP8ipwQdghNGZGMH26+R68WvuDv7+g\n/WOzbvU4qhLYs6oVmHDDp5HsortNWD6tmTZP1TG+Ai3Gi4ArFxnkCgAGAi1IOqJBCtiRBtafo/D7\nCCD4ovp72I66yBOVQRJ9TIUAYGkMEYaWIBV+AtbchGI98UVc8NwpvMQjDuVuypcLwp/Y0cT0Hcn3\n4GqtMubvL2jzWfdP4rf0grzpHnnYH70Bbz7gDzg7Qet2O16wNCK8FHB5jBFXDgiBQAuSjmiQAnak\no7UWAUyIygr4fdRFnqg+kLVjKgQAd0zj7vK5kK4WGo1QrN1/AlTvO4MfqmP+8owdyt3UQheEP/Eh\ngElo5XtQtXbvrg9f0y53cf+Ra761Vn9jPPZnqL6sEe95aaCjLb6WR5/Vpqm1z+zdPQIKgFeovnLn\nN0Yfhu1oi7iVm6bVq5vKgxceALUssRscLR7f+tO3trTNpVEbfejuKTVU2z4C97eVycAQ4OWAS/94\nZtcVAJQC1bB4zZIWtA1o4IBdoOBIc60VB3SiOkBPOSaddQHFRRUPO6tCHmD1LLFZfT6cQJyYAfFw\nd3c9/jppnMOS7eJ3TzhXsrkLNseJhWkuCB6h/gL0dSIeQNFED6rWJr+zUJ4dxPW1ycZ1/eO0HyZ/\nBn1LyqrtXPeqMtxlC3xN35haA3xehobe6FZBeehGuBO+GsCFx0dfm1Or6Xkdfult1KalxTO1s60h\nvQO41h6DX4xcr+bL9UVAZalZ4AAvB3zsfTCv96wIUApUw2LsWdKStrIGFhhcoOBIc60VBwQbuwP0\nlGPSWRfFRZWTKKtC3imV3yQ2g+eCCeQSUxYPv9I6x5vwND6GAmW3GLFmkc1dsDnOmiSO0g1C5ez8\nplbEg6aJHqjWqgvvh8ZS/wLWZrt8sY77kOXCaRicJQtqUDUJrm7xUl2Cj2qbaw2fl6E+psfcdX9p\nDk7CjQFcaMO39Vp6Xocn3T5tOVo8Uz/HnGytfRJ2tJ9S8/sR5ct6pQUGkZcHjEdh9nCt9QIIQqDM\nGbKkRW1lDSwwOF7gSJtaWwagi90Besox64wLcKeVJ6qYRFkV8gCh/9/EZngxmEAuMWXx8OO/dXCh\ntrAK85iyW4xY50o2d6s2x1kTzHCXf26QnnJLeBv0oGmiB6q1GlyC8sVV01RWJeRFrQYvwPCItuEj\npn90A7UtUPvPX80I1xo9Lw8smUHbtfG9zY72S0HcgTm9lJ7X4Ta7zRiOFvtFSVcZTlwabaCXVdTa\nOHVGm8DA6jk+w8sBU9q8oPesBBCEQCFMWtRW1sACY2ZyoB5pU2vLAHSxO0CnXG0zHfD1zawLFKmo\nqGISCUeXAwjDKp+Oj0A4gTgxZfHwARRzuA8OYs5QdksRm7AyOeLluMkp7Lwg3CCUltDPQMSDqh/0\noJ4h8a3T4CKxwY8Rk8v0hu62Jo3g78qu6rzLpy/P4t0dExM3TUzQX2Jq5/GS5QszbdhDUsm48Hma\nwXZsGi+ZWiMKTItW4UfHJBxsYl+emNj84sREF02w9YXOBvDBXDUGDvBywDdAlfasFFAK1FCRSEva\nBjRwCrpADWlP/2UAutgdoKecYZ11Afa0ckWVkkg6upxT6l8kMhsgnEA2MQPiYQ2s6j4FJ5u61iK5\nIuSuznGjh+44iMQgDM/iN9MRVWuyB0WTaw3fOh3r0ncgZnwTy58a1vA7lAHwc9Pbbj8cUd/vwL8X\nKku4S3gRczvU/kuPADJuvWsQZ5Cs8LbJo6UXoqSfMvT4awiwvnAztdPQp04Hv+u7agA/JWReFhjT\npryot68IEIRADQX6IEmTlrQNaOCAbaAeadZ/GYA2dlE5Q1pwUVxU8bAFFfJOiX5mQR9+FAYTyCZm\nQDw4AKVbOvAI4qjsthJmciWbuy7H+SDVdwIfpRtUf17D59OgB10/6EF9r5W68Hx7sINJ2l4PfW2F\nMzgHuzUgajKkLb5+EIB0wGaeIcvj9SYIvy+3QuNl+mkr4hKHOYVyB/xEejdiaalFeDkJ8PtGW91x\naTyNL3Cu1fO7ATmrZoEDvCxwA/94M/ncygFBCFRTEUlL2gY0YGBwgXqkWf9lANrYHSAeNCtnSAsu\n3GnliSoetnB0eadUOV+dan68CcEEcokZEA9OwGr8iXAKo6LsFiPWLLK563LcaIKdF4QbhB1N9SAa\n9KBpogdVa8OzA7+DMibqzMJe/Cyo0cvW1bOVN7V166+euVlb7OBL0DeibVNrq+eO4I5uchWuuACo\n1V0B3IF3b3vLtPL1Kv4lEF7Dz41x9qB6S4tHDwGcL+sbU2uVS4NL1Y7e+DeY0ZYCVmPMKwQ8NA7D\n05MKcXmAijbTwl4IlGezpEVtjQYhYC9QjzTXmnRYOaJ6gGCVY86Ci+KiikmUVSELmI59zY9g20NI\nKZRALjEDscIYfS8OnEEMzG4xYs2CcjeVIyrHU2M6iNQgbEL4zzWDHkDRJA+q1mbuXddSj4BPjB7Z\n1gHY1MafYN9bh8+JZHUbL05rC0z7+tvfZixTa9WdWCyl6eQqfIQ7P/V39XAo4q6G52/WO/aNIhza\n/Rexd83S4iH8htyuK4PfQ9YeuHbtr83GJ6ZebykIDUxgzCsEjJ9F5Vc0uqm1goBKGKYlB8qzWdKi\ntqwBKe6aVdDj5ZHmWpMOiwEDsXuAYJVjx4KL4qKKh51VIQuYEhUGHpx6F750oF8XIqZLzECsj7wx\nUh+p73njYTyhMRAj1iygNJ1OPpXjKe10EMnB2qHL8/NfOBv2YOoHPaha038O38hKQ6VFJv4IMBbd\n6TGy/GZqTQ3dj9fkqvIYTfS36EothltdxAX3qWV8SdPicepNafCQ3khv+B0EW8SLbb1eAl4mYJFA\nmZztnQ9ZW9IgDpwKhGstdFgFRJWUs4TJ8I/YCZkvqnTYCtipQLd8Mtnsodmv0P8S1XMCEQK3jWwY\nj8lcyYajlzM7u5kMcRAg14Oqta0K6jcWsIHWIfV2kCzdnMUj1H/Wu5lCO7kKfxvQmLoqCy8h3PII\nTnZolW1pWnYCjUoHL6518B/OjasXZGiZxhbxYltPScCV5BK8iwLmB6pdJa4VRKUW0yAOnAqE9Y8B\nprakY+8IgSqSfPGP2AmZLyoFkualMCsd1ZkL32SzhxbsruMHfs8JZFyozmV3R4g4G47ei2uzTRwE\nyPVQpr+v6X/UPdhi2KNoXAc78UqWbs7ikVRfQ1W89TR7bEGt2aWueInhPorztQ6vpD5Dy59M2rSx\nf2QQy9VBsEW82Na7CgDnARYINMkwcRfSljQ4mliZVjAZiF0aA0xuSccuBWphswaDFRD1KO5O84oD\npmKnxa9fbuK1xwQiANtsdksRZ8PR+zhci0KGOIjjuR6o1p48i0mKP25m6Uqtg//dva5pLOwSlr7P\nXJWrjj9c3/QedbuPB2k2hEt6Nnih6jO0ErOJG9pYGf0LXh0EW8SLbb2pAHAeYPLLQgxU+xKvMQ06\n/o4McDIQuzQGmNySjl0K1MJmDQYrIGoHd6d5xQGToqq1t/6Juh4TKOHNZrcUcTYcvZfDTSCJg7gi\n1wPW2pp3GqgDCcjl3pwIbsAXhbmt0QouWRktfO8baj0ChwGLBBoig+NhDXoEDgPi2+YVtbAGPQKH\nAZFnkfAjsepIY8Si3gsLleOhb8P0/wA0XWUEwKcI9QAAAABJRU5ErkJggg==\n",
+      "text/latex": [
+       "$$\\left [ p{\\left (x,y,z,- s + t \\right )}, \\quad p{\\left (x,y,z,t \\right )}, \\quad p{\\left (- h + x,y,z,t \\right )}, \\quad p{\\left (h + x,y,z,t \\right )}, \\quad p{\\left (x,- h + y,z,t \\right )}, \\quad p{\\left (x,h + y,z,t \\right )}, \\quad p{\\left (x,y,- h + z,t \\right )}, \\quad p{\\left (x,y,h + z,t \\right )}, \\quad Q{\\left (x,y,z,t \\right )}, \\quad M{\\left (x,y,z \\right )}, \\quad s, \\quad h, \\quad E{\\left (x,y,z \\right )}\\right ]$$"
+      ],
+      "text/plain": [
+       "[p(x, y, z, -s + t), p(x, y, z, t), p(-h + x, y, z, t), p(h + x, y, z, t), p(x\n",
+       ", -h + y, z, t), p(x, h + y, z, t), p(x, y, -h + z, t), p(x, y, h + z, t), Q(x\n",
+       ", y, z, t), M(x, y, z), s, h, E(x, y, z)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arglamb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -200,7 +210,7 @@
        "                                                                    "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +262,7 @@
        "                                                                  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -346,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -375,6 +385,7 @@
     "                    src = source(xmin+a*hstep,ymin+b*hstep,zmin+c*hstep,tstep*ti)\n",
     "                    damp=dampx(a)+dampy(b)+dampz(c)\n",
     "                    u[ti,a,b,c]=ts(u[ti-2,a,b,c], \n",
+    "                                   u[ti-1,a,b,c],\n",
     "                                   u[ti-1,a-1,b,c], \n",
     "                                   u[ti-1,a+1,b,c],\n",
     "                                   u[ti-1,a,b-1,c],\n",
@@ -387,21 +398,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "<lambda>() missing 4 required positional arguments: '_Dummy_43', '_Dummy_44', '_Dummy_45', and '_Dummy_46'",
+     "evalue": "can't convert expression to float",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-fb61e73f1272>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mForward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mny\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnz\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-20-812a419998f4>\u001b[0m in \u001b[0;36mForward\u001b[1;34m(nt, nx, ny, nz, m)\u001b[0m\n\u001b[0;32m     14\u001b[0m                                    \u001b[0mu\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mti\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m                                    \u001b[0mu\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mti\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m                                    src , m[a,b,c], dt, hstep, damp)\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mu\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: <lambda>() missing 4 required positional arguments: '_Dummy_43', '_Dummy_44', '_Dummy_45', and '_Dummy_46'"
+      "\u001b[1;32m<ipython-input-15-fb61e73f1272>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mForward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mny\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnz\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-14-057da01a988c>\u001b[0m in \u001b[0;36mForward\u001b[1;34m(nt, nx, ny, nz, m)\u001b[0m\n\u001b[0;32m     15\u001b[0m                                    \u001b[0mu\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mti\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m                                    \u001b[0mu\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mti\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m                                    src , m[a,b,c], dt, hstep, damp)\n\u001b[0m\u001b[0;32m     18\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mu\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\mathias\\Anaconda3\\lib\\site-packages\\sympy\\core\\expr.py\u001b[0m in \u001b[0;36m__float__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    223\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_number\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_real_imag\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    224\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"can't convert complex to float\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 225\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"can't convert expression to float\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    226\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    227\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__complex__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can't convert expression to float"
      ]
     }
    ],
