--- a/AcousticFWI/Acoustic3D.ipynb
+++ b/AcousticFWI/Acoustic3D.ipynb
@@ -392,7 +392,7 @@
     "                                   u[ti-1,a,b+1,c],\n",
     "                                   u[ti-1,a,b,c-1],\n",
     "                                   u[ti-1,a,b,c+1],\n",
-    "                                   src , m[a,b,c], dt, hstep, damp)\n",
+    "                                   src , m[a,b,c], tstep, hstep, damp)\n",
     "    return u\n"
    ]
   },
