TTI adjoint test

--- a/AcousticFWI/TTI2D_mathiasFD.ipynb
+++ b/AcousticFWI/TTI2D_mathiasFD.ipynb
@@ -472,7 +472,7 @@
     "                                 hstep,\n",
     "                                 damp)\n",
     "                if a==zrec :\n",
-    "                    rec[ti,b-1]=(.5*u1[ti+2,a,b] + .5u2[ti+2,a,b])\n",
+    "                    rec[ti,b-1]=(.5*u1[ti+2,a,b] + .5*u2[ti+2,a,b])\n",
     "    return rec,u1,u2"
    ]
   },
