--- a/AcousticFWI/OP.ipynb
+++ b/AcousticFWI/OP.ipynb
@@ -177,7 +177,7 @@
      "output_type": "stream",
      "text": [
       "(3*k + 2)/(2*(3*k + 1))\n",
-      "(3*k + 2)/(2*(3*k + 1))\n",
+      "(3*k + 4)/(3*(2*k + 1))\n",
       "(6*k**2 + 6*k + 73)/(2*(6*k**2 + 31))\n",
       "s*(3*k + 2)/(2*(s*(3*k + 1) + 1))\n"
      ]
@@ -185,7 +185,7 @@
    ],
    "source": [
     "print(simplify(AI_acou/(4*IO_acou)))\n",
-    "print(simplify(AI_acou/(4*IO_acou)))\n",
+    "print(simplify(AI_vti/(4*IO_vti)))\n",
     "print(simplify(AI_tti/(4*IO_tti)))\n",
     "print(simplify(AI_acou/(4*IO_acoum)))\n",
     "\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
