--- a/AcousticFWI/4thorder.ipynb
+++ b/AcousticFWI/4thorder.ipynb
@@ -49,7 +49,9 @@
     "\n",
     "and finally by replacing the discrete forms in the original pde we have\n",
     "\n",
-    "$ m \\frac{u(x,t+dt) - 2 u(x,t) + u(x,t-dt)}{dt^2} = \\nabla^2u(x,t) + q(t) + \\frac{dt^2}{12} \\left(m^{-1} \\nabla^2 (\\nabla^2 u(x,t) + q(t) ) +  \\frac{d^2 q}{dt^2} \\right)$"
+    "$ m \\frac{u(x,t+dt) - 2 u(x,t) + u(x,t-dt)}{dt^2} = \\nabla^2u(x,t) + q(t) + \\frac{dt^2}{12} \\left(m^{-1} \\nabla^2 (\\nabla^2 u(x,t) + q(t) ) +  \\frac{d^2 q}{dt^2} \\right)$\n",
+    "\n",
+    "not that the term $\\nabla^2 (\\nabla^2 u(x,t))$ contains cross derivatives :"
    ]
   },
   {
