--- a/AcousticFWI/4thorder.ipynb
+++ b/AcousticFWI/4thorder.ipynb
@@ -51,7 +51,11 @@
     "\n",
     "$ m \\frac{u(x,t+dt) - 2 u(x,t) + u(x,t-dt)}{dt^2} = \\nabla^2u(x,t) + q(t) + \\frac{dt^2}{12} \\left(m^{-1} \\nabla^2 (\\nabla^2 u(x,t) + q(t) ) +  \\frac{d^2 q}{dt^2} \\right)$\n",
     "\n",
-    "not that the term $\\nabla^2 (\\nabla^2 u(x,t))$ contains cross derivatives :"
+    "not that the term $\\nabla^2 (\\nabla^2 u(x,t))$ contains cross derivatives e.g in 2D :\n",
+    "\n",
+    "$ \\nabla^2 (\\nabla^2 u(x,t)) = \\frac{d^4 u(x,t)}{dx^4}  + \\frac{d^4 u(x,t)}{dz^4} + 2  \\frac{d^4 u(x,t)}{dx^2dz^2} $\n",
+    "\n",
+    "but it can be computed in cascade by first computing $\\nabla^2 u(x,t) + q(t)$ then compute $u(x,t+dt)$"
    ]
   },
   {
