Cross derivative locations fix

--- a/AcousticFWI/TTI_3d_simplified.ipynb
+++ b/AcousticFWI/TTI_3d_simplified.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -131,10 +131,10 @@
     "    dims = kwargs.get('dims', (x, y))\n",
     "    diff = kwargs.get('diff', h)\n",
     "    assert(isinstance(dims, tuple) and len(dims) == 2)\n",
-    "    ind1r = [(dims[0] + i * diff) for i in range(-int((order) / 2) + 1, int((order + 1) / 2) + 2)]\n",
-    "    ind2r = [(dims[1] + i * diff) for i in range(-int((order) / 2) + 1, int((order + 1) / 2) + 2)]\n",
-    "    ind1l = [(dims[0] - i * diff) for i in range(-int((order) / 2) + 1, int((order + 1) / 2) + 2)]\n",
-    "    ind2l = [(dims[1] - i * diff) for i in range(-int((order) / 2) + 1, int((order + 1) / 2) + 2)]\n",
+    "    ind1r = [(dims[0] + i * diff) for i in range(-int((order) / 2) + 1 - (order<4), int((order + 1) / 2) + 2 - (order<4))]\n",
+    "    ind2r = [(dims[1] + i * diff) for i in range(-int((order) / 2) + 1 - (order<4), int((order + 1) / 2) + 2 - (order<4))]\n",
+    "    ind1l = [(dims[0] - i * diff) for i in range(-int((order) / 2) + 1 - (order<4), int((order + 1) / 2) + 2 - (order<4))]\n",
+    "    ind2l = [(dims[1] - i * diff) for i in range(-int((order) / 2) + 1 - (order<4), int((order + 1) / 2) + 2 - (order<4))]\n",
     "    cx = finite_diff_weights(1, ind1r, dims[0])\n",
     "    cx = cx[-1][-1]\n",
     "    cy = finite_diff_weights(1, ind2r, dims[1])\n",
@@ -149,40 +149,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAB4oAAAAqBAMAAAC3jss6AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEJmJdjLNVN0iZu+7\nq0QgoRR7AAAOEklEQVR4Ae1df4hcRx3/vtvb3du9u73FhKK24baNjQiJrtdQYm3IJjmEoqFHERFF\nssZ6qaDtWZTWH5CDlKSxSpaAVNtq1hpFmz9yxTQoQnqVCKZt6FVjqaJ4mApVkLvYJrVSc37n97z3\n5r19s/duntxmIPPmzZs3n8/nO5/ZfTu7cwF42+YbgaQ7q3fM00I2mbd+xwRBLmzPv/cqgwxi4NQH\nTsGonZwjujX0Xnh7i+h8eun1bGYPQy1MeYdIaXBpqcFqXOc9zsCpD5yCUSM5R3Rqp/IM5JpE52fO\n08lMilmk4wA3E9zC1tuygEfM3mbg1AdOwaid3CM6tdPQHBQvEqFzVG1m2TmAfVVEH77KIJMYOPWB\nUzBqKPeITg09MgeVN4jQjGfxfwEWppBGdrO4txk49YFTMDqL3SM6tdNoDSr0A/Efj7FVLiraeeb9\nC2dxA2GHn2CrXFcZuI2AUx84BaNxdI7o1tBH65B/jQh9Bo7OU8GZZCXksLuO0EPV0pWrDNzHwKkP\nnIJRNzlHdGtoKQ8n0HQm04eCStF49ptMaPQ4A6c+cApG3eQc0a2dRuv8iRqg781Mpg8F9fC9mD5R\n49n7Wlnw6HEGTn3gFIyayTmiWzuN1KBIVreGm5DL5lGWTVn8XLyPrG69BLBtnlU5znubgVMfOAWj\nNnKP6NROA7NQJt80DTahj37j5HjuCLhvApyo4skpfC8mR/eptxk49YFTMOok94hO7dQ/A31NFNoH\nMECOWaUPA2wg2DWAA9lw6G0GTn3gFIy6yT2iWzsdhGsnvMtQqsHxTD6P8ik7MOU9BaNNOALlX2Qz\ni3ucgVMfOAWjdnKO6NZOa8Z/D/AtgCNbr1ez5xOquGKlH/l69jbvmoCBOSit/616oM63fW3SPsme\nQXlC1+Q4Bn75K+wDp2AkqP7QwgrLCyM6G8yAUGWo0qwqH9n4a4Drfq4qEpRKNzw/Ad5z07FNh30O\nNjZ9TNV2QyNdBisRA8BX0A5Ji4Elg+XLJz5ICNqpWefRRrBOjEWoEpmhc2gRMZFTBWwnjZ0RcTCt\nEJcltKDeDr05uma8RyhJdFxH17sLtejGZANTM/oyv/Jp2aIrGpAmA4C0Y0A2kxWkwqiCioEtg+XL\npz5IKDuuWaLRJmBxA6YClMAMiUKLiJ2dqmDj458IEQfTBnF5Qncq6sNVGJwBoD+1prXvUNciSy8C\n/BJgZEo08FqiJI7FRQANRVT7j/11ed4VjVQZpB8D2AfAJIbjI4VrMbBlkFB+DDgdoYRDH9cs0WgT\nsDjLyJBAAjPI0Kq7wiVE7OxU/bY4jQoxeoaQwbRBXJ5QbX1pcBqGL0FFfQn1JV1WRBmfv/8yAQtV\ncbnYECVx7GsCXCtOoo6DLXmlKxqpMkg/BmRR3pshEsPxUcJVDGwZJJQfA058kHDoY5slGm0CFmcZ\nGRJIYAYZWnVXuISInZ2q3RarUSFGzxBiaBvEZQmtTCvqhYtkFudUTTRHddM9VTKLt8iKsFEG6vj4\nNCUbmAuvququaKTKIP0YwH7Ut5doDMdHKtdiYMsgofxocOqDhEMf2yzJaFOwOMvIkEACM8jQqrtC\nJYLY2anabbEaFWL0DCGDaYPYrdALZz+6q5qradTxe+SLUHj3sbO8TnBcu+v7Oxu0bs27oPSk7w48\nOVyFPV/9CH8jkUZ59XS+TVr+84VzDQjAkHqRKrd+e/xFGBOn9NgFjVQZpB2Dyp/eOg9Mo4yPLjgc\nA1sGYfmVh+bZ1w/aABjBlQ/CoN74H17ZTJl6Yw14tEqL4WZgAtMFyrICCzM2gkV5UiBqoZUgvoJC\njHCqEdagURhaRxQzREf0DaZxbhgRuxRaf3kqNzvU1gnAQh1GPwd/5nWco1cvP8B/JlL/GvQv+u7A\n57DXwLvcGp5j1cIo3pkdm1gNfoqAcpOVDXlu+CDcCs/6rtjTSJdB6jEgnxbhx0SjiI9PbzgGlgwM\n8q8bv4EPiRoAI7jyQRh0DfykcYBSzRVn4HZGOtwMTGA+heJEghkYG8Hw0dvkSYWoQisw/EeJGOVU\nI2xYozK0hmiaxfpgmueGEbE7oaWpL0B5cWDKpxl/S7ZvAp7ndZxjrpq7WGyRutLUBhia5VfFAX/x\nVrwkq4VRPChxE+GnCChOi9ah48OFOTgBB3319jTSZZB6DMinRbifaBTxIWWZwjGwZGCQX4Xv8f7V\nAJjANR+EQd8P26pfod08jBK4L8LNwAQm1WkFBWZgbAQDMJpBIarQajiqqBDxzc7oVCNsWKMytIZo\nmsX6YFogJhW6pKdFDxejcxcH53HZ5a4HMR2YwN9mztIfR57kQeAcPShgPUkenISRBi1eQ+558LNY\n3oj3NWGQVWsu/RRtB/QjYX5RoYzoNJagiouV26qnl0kjXQbo+3RjQD4twm4SEDaROsbAkoFJfp6/\niooBkOC++Gs+IEtwAdlV+DwhjamKA/w6K4abAQTBpD2iwAyMjWARnlSIIrQdEaOcaoQ1aRSGFogY\nDTpDogYTr5vnhhExsVA2CCLHZbihGTKLVdqFxf1QukRqbp6cfGhykn01yGcuXcXcjbNdT/1oFtR1\nlFTnJifvOjU5WSPXKzTHyUm2T+EsjkwLVXgOcBar1AWNdBmkHQMYnUd1u33xUXKxFIqBJQOT/L9y\nBDEA+uDo4MoHJlA+cwnFPPWF2SFBMB1AL0swE2PxMqGDQZQZBCIPrQ7iK0tEiHKqCdYQCmFoMZi+\nGaJDqsG0QexSKC7DjdZ8T9TFGnwXxzw34zFS9JWGFHHmVmkVvoLiT7996V4otTCSH+Qt5EPbvbxV\nZRGv0FVJ323qZAvgnzzRn6i7oZEqg9RjAAv4GAN0DVrGRwUAS8EY2DIwyMcosqQNgBFc+sAEijOX\nm2ED4DYDkkzNTGAMPZBLMANjMIBBlBkkogptAIqfSkSIcqoB1qRRGFobTPZeHMRVg2mBaC00t/F6\nAlzATRFV3+rWHQC3lRdhsP4DRozP4mL1duhnsxj/vuA5P+l8DfpbJwB+VmYthFEwysO0Za5ZnDCu\nbnEa+Dup8pO+1a1uaKTKIPUY4F/u/bJxdSsqBrYMDPLRdHPBARCDw4Yw6AMD6BdxLXM7a30OcPBJ\nMjTDCRIGY7eJfOxX1B/SdAbGJjCIMINCVKEVUPwYRIxyqgnWoFEaWhvMwCzmiNLQNojWQj9A9ufj\nj2dm809Bjo0MFV7af9Om6eEmjMzXWSD4LF6YegEewXVorOybrfyHlVgLgO/cNPYy6e9KjtUIo3z8\nh8fuJhuXoG9uLWY10V4dOQ14Cz45AVtVfVc0UmWQegxgk9cAuIFoFPFheqNiYMsgLD//jVs+NB8c\nACO49EEYtPLG0GKpTXvBj3gLrBRuBhSMGSRitHMtvA2TBAszNoJFmUEhqtCykIo8hBjhVCOsQSM1\nNNWoIcqnVYIqEKWhbRCthR6C3S0EXbiwo+V71C3gSsQ0vjnn1vNIcI7rxtfe0qZftoH3ux1vshJv\nAvcsLf2bvJOO8ZkvjFIrn5onXz9D6UwD3/fnRXt15DQqVza/hz9tsmtd0UiVQeoxgMfGUdvdRJ+I\nD9MaFQNbBmH5fXAc8QIDYASXPgiDeue373yC9QLrNuOfVyL9hZvhjnUCdrgaPdoDrTwaRzNdmLER\nLMoMClGFloVU5CHECKcaYQ0aqaGpRg3RN4s5ojK0DaKFULaR5DT7E5hbqN5DQrXh6OMIFTL1yXI0\nLxluwCq/Uf7OGz3qa+yjgZ9bMA3Qzn2t5IkljXQZWIJT0mYGpRlyUVxLHgNLBgKAhc8/AOKaD9zo\nAz8o62UDdin6Y737nyiZQfCKf7Tp9qDBefa3Pk1gghXvMxKMXvcRE4gstPx+vjcrDpG2TAobhyiu\n6RqjDZ0UsZNQ/FhCEv2vGfbQ4uM0N2f/8FWX8ewlukBHSlGp0taviJPNeiX9SE4qKA1GqVzzt9DP\nLGmky8ASnPI2M8g1yEV5TR+K2BhYMpAAlEqb5gBsAOQ1HdzoAz8o9jLcxBUfANEf79bXrMwrOZg4\n4xvE2H9LYgKTrNgd7SgwetmIyEIrATsi0pZJYeMQ5TWmi2qMHsykiJ2E4nezJD2A/zy2a2Mo5k2Q\ntpXZO+mNZzAnpUTJa7NmXtPfXKMBo4zSWX+L6DM7GikzsAOnIgQDuMavqcsY2DEQ4DEDkMAHpJeB\nxlADTYOlyCRsEQRjRhto4I3pgVEWAjEQWr4tLyki7cpSYwxiUkMnRDQIxa+yMOVqmN1/uYE5lGZJ\nniS1sdErOyYwJ6VEqcxbBV8qNBrFw3fSRtoO+fiu23g5OY2UGdiBUyGCAQRep7qMgR0DAR4zAAl8\nQHqpjN+IueiPKgtmbV4RAMMvbEkaI1l6YKQ3acRAaC0RaVeWGqMRExs6IaJBKPtY8ji9wrNH9JMV\nKv800K+BBi6FrmTKnkE58NDjNAYJ5KfngwBYbpoMbLlGcpHSAyM9BkP7f4G4EobmQulGkkq9Qt5R\nM0zZ0+hxBi7ls+1BF+Bvzgy3yhHZRpKP3fd1+mDtLKpBoOxp9DgDp/Lp9qD83vueCdpgxc5XOSLb\nSPL00tKKBTBRx9nT6HEGTuXT7UGDS0uLibyRRqNVjohf9g420ojT8vrInkaPM3AqH79mPrk8v9je\nvcoRxUYS27Ck3D57Gj3OwKl8sT0oZRPFdLfKEUfV3qOYIKz4pexp9DgDl/L17UEr7iwKsNoRtY0k\nbgJqRsmeRo8zcClf3x5ktkPatasdUdtIknbobPrLnkaPM3Apf1jbJGdjku7brnbEZ9Xeo+6DtPw7\ns6fR4wxcyh/SNskt3zpJeljViP8DAEvSyKfyYsAAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABXwAAAAqBAMAAADysI4lAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEJmJdjLNVN0iZu+7\nq0QgoRR7AAAOWUlEQVR4Ab1cfYisVRl/3p27szuzu7NDilQqO2reCK65XS9ipjhel0Dq4iARUcTd\nzFaD0k0K7QPuguJHFg5CWGo55S1K/3AllSLQNQzy4+JaJhZFSxpYELs3vzLsbs/5eM4575znPXNm\nZ84cuO953nOe8/v9nueceed933tmAd6x73QQ5fL6pRvS2NkhO21/S4ysnPpMC8oXjr9/ZzA9R5Hc\n2/f8ZmDNDFlieGIcVbaIz68TK0gMb+O5At7ZFmePbb9mG/u3ysvZLWLUyVA6BlPb283+IaJGaLnZ\nOlywMahmhjAxPDGOKlvE59eJFSSGN/FUV6G0KM4++7xcxcLcSbkf4Gwx7jmAX0H5/It3ghExhuTO\n1GFqdVDNPl9ieEM4omwZPt9IrCAxvIlneh0mjoqzddO0I+MIwKE6jvwFwF9bMzuCiBlEcqdWYOb1\nQTX7hInhDeGIsmX4fCOxgsTwJp7Zdai9Kc4GXL7/A9hcRpir60mXL8ktH02yfBPDm6yPKFuGzzcS\nK0gMb+KZa0BN3vT+6bB6hDM9fRnZv3H5NtWQ2+oz96nnuL4gopyNXIDJozCYZoYwMTwxjipbxOfX\niRUkhrfx3DMP46+K08fhng3b3K9VQYyD83JU7VWYrleO9YsQ52/k4qdlfkDNDGNieGIcVbaIz68T\nK0gMb+NxJmx6xTb3azl6J9fE4N/2ixDn78j9lhgxiGaGMTE8MY4qW8Tn14kVJIa38czN65sHgLG3\nbHO/VoZXX33zsEeOPbPdL0SUv5U7tiYGDKKZIUwMT4yjyhbx+XViBYnhbTyzDZgQj24zi+KF7c4L\n3vseEo9usGsd4AUQb2VTFJILcGBwzb7AxPCGcETZMny+kVhBYngTz+QaVMWLs6lFGJMv0ExPfwZ+\nlT9QF0OugUr7EYAz5Ul/GBHeJBcmGvC9QTX7fInhDeGIsmX4fCOxgsTwJp5dqzC2iGdj+Cgv6p2W\njwDsFmPHG7Cr3QC4cadA4XEkFy4FuHhQzT5VYnhDOKJsGT7fSKwgMbyN5yY4sZW9AZUG3N+2rX1b\nk8vZwzC3CN89a++LcDtUf9k3QtwAknv9WWesDKqZYUwMT4yjyhbx+XViBYnhbTzHLfwB4NsAt59/\nim38pDULrWrL7cr2HWjB5Dpcvb39H6ic9jt77zDecf36tvM0oOWWt7e3V/rXzLD/ONc2dHhCz9Mk\nyxbRMXViBfl5GkWAeUYn4sqac1Jo4rKPKXf3cDoJ/585VCJpijRnT6+E0GEm9yksdHXheynmQCJp\nwMlWnzRDClQo6AXFBQiR89QHfK8EFDGW7bWTVYqNuE2tXNSXb/9M/tQ/u8xvMi3xNIWayw2D5hli\nl9yi18o15OBDirnB8TTgZqtPmuEEKhWEoLgA+1wOsfChBARWxkWsxFzjIXxFNp9rKTjp7SW3XMjR\n7/IwommgUPPsMqH68BNbUDyQhsk6Bx9SnBulTyxN1ub6bVsuW33S2EB9FqvAcvGWVGCh/Jyxw8w8\n+dR5/y74sLtJAONmGPP44iziuQtfM2Sr/ki/ZarHhEHNvq/7sjc8mqZY82adUH148dLlROoO1m5K\ngoo5FEsz0eT6bZubrX5pbKA+i1VguXhLKrBQfs7YYWaefOq8fxd80N0mgHEzjHl8PKuteE1ew/XY\ncoXXyjS8wrTlmkor5tTPVTRNseZzAvCT8wDlZeNQbOTgg4o5DEvDzENugJutfmlsoD6LVZCjY06k\nAgvlTwkzBsDMk0+d9++CD7rbBDBuhtHFf+nJjx2olxrYdPyBH1zUlF3HvQcqD0oLXnl0vCOs2p/f\nfh5grzCLS+287yw8J52yhT++vE86ZnubcJe5HMqm8nsPP6lBKFe1Wzfku48oGjCaeZrLvvbRtsLv\nhod/PXukCTJaLYCrDLzp9BXzzJQth4aZBw1rs0U8Pg0/KeRvAzUsjALy9mtHgYWinMUuB0Pt4bPw\n5M7C2wSQW68FOP/icmltuoN3BvPVGyYXpYb5r8OuLWllT+w/Qxog7qXgJ8ouOpZmboLz4CnsPg5+\n2rxRupUmVuGS/IC5z8NfdAvl6qSFU9dlUwwNGM0sTfZGe0aBgQcPeAMF1UXNXlAZeNPvK+aZTbYs\njZkHA0aGzRa1+DTspJC7Eyix2PmyCsjdr60CB0rnjGW28HaeiDoSXruz8GATQKgco8NUWf4iVLcm\nlwFK9dLRibboqizvhuk16ZRBRa8EcS8F18nGwsMd5XV4AG7C/g/ABfWvSr87cOAz+RGHWqaF1lcd\nvq98YmisZpZm4nVSb5avgZf/UTixktfTdWbhTYevmGW22cL7NFA0NA8Gyxg2W9Tk07CTQu5OoMTC\nKSB3v7YKHCg9JSyzhbfzRNSR8NqdhQebAEL1GPH1vy1bGbwJpaNTG3j1hfIayJLBQzDbVDZ8Wtfi\nXgoOQnblzVhubMGsBSEL6vj8ekH9UXSswxf0uPpUE16TthmKc/uQ7qXlC+P6U6Jp4ARBc/PnAAjc\n1o5mjkb8lzhyyuLBy1u28a1I+IBilhlMtsR9GtJgUfMQzFaAhp0Uyo0TKM22p8BgBxUwOWOZLTzN\nU1SALrxWysPbleEHZBnl1OoDPuxNr4rlC3bJYtvBluqvNVQNcxtoHNQnRRU+vz4NYvmCXrJobNbH\nX5ct5nA9VGTL2UtLty4tqVd9f9O9UTSOZvXJyNFgnPcI9Rx8JvbYqXWlCZnKgde9nGKGGShbRFNa\nWrrykaWlBkOCTU62lANHY64jzqRoOArUZelWwDNTq1FAUG7OOGaCp+XgUhOorT14152D1wlw3boZ\nLbq08GFvriFuHnBxtvCqKQp+rHEHhizX6Bo2IQNwH5Opw63PAfzRiLh5AFyy6C/KbsBtMW7BuS2t\n6k66PE40tEcUjdXM0eAn4EM6EA++toU9uZcKrjJtW3jdwCnmmHHznSoOjb2M6D5b2WypNo6GnRQN\n4QRqWBgFltCzjAIHinLGMhO8sxwMtYcOHLxxZ1abkwDjxjBKotKeU0Rdxp07dfHoNlG/BHap5Ys/\nvz0ifcQuxRllnQ1fgYJHN42EfpdB9UH56PYlfPS7UA08AgjnluoWTM3/ULVQrlCkcoqiMZpZmgcA\nfl5VgXjwpcWJVtGj295fq0E2JaSaUcwym2w5NGYeCMzQ2GzpLoaGnRRCcgIlFk4BuZuaUeBA6Zyx\nzAYe/0YCLQeiNvDMcnDgtTsL7ySAUDlGyfRBsccc7xjWxh+GEq6dzeVn4U7ArWh49V2r/VdZn7j3\n8FViWxnAGVkT4FQ0/KKRsONt+FQLzsfXbG9Ob1U6auAe2NSWHjmzCLMb8+pE52r8m+d+eENSR9GQ\nZp4GwzpW8uGlmrH14zG8hlaSq0ptFCYLwZtuXzHPbLLl0NA8EJilMdmiLp+GnxTydwIlFk4BuVPN\nKXCg9JQUL4eueSJqggd/OYiVRlOi3Vl4JwGEagLqXoC3wME2Um6+tL8tv05PXjj+3A7AbXgJyn6/\n/y1lNaqPbIhf+ALcvYCHq/CfXzQSrtpj+94n7zCy5y+86D7502D8Kzz78GdEEkKPxEt96TRt61yN\nwf0ILahjaIxmnuYpfD+d/3QoeKGh8kQTv3A2NHuummyPY9CimJSoU/x9naeYZzbZcmhoHgjL0phs\nUZdPA+ykkL8TKLFwCsidak6BA6WnhGWW8F3zRNQED/5yEF/INCXanYV3EkCoJiC7MtT2okfVD43P\nkbS3GPKaWNPi7heUJc7+IQ5YKquqNsccEr57WxE9kxJB+qiBu9EmCNlsDzpXqoEIe9HgPZUoVnMh\nTQ7eaLhL0dmj3Og0tUE/lu6Gt45ocZD5AClURUPzgEO7aLxsuTx5Gm5SXG/9foOa8gqoFesYBb2Z\n8/PkBNhrOQgljjueFQaWd6OA1MrAe0dR5B/JUQ/+P5IN4lDFfy/IB0thqdLRdampDVO5SPI+Gnuq\nDdPdET9PwxtyALS48k+3kQh70eBNoyhWc6eIJgdvNOyTw92DAlR/fEjcwYti4V1P8CC9ADvaX9HU\n6BRb8zQqd0629DhZ5WlEZronxfUGl8Umu1egrILezEKNKGqeXOoey0EMct351Sa8utw6so0YZ5fl\n6Q14zNQen2lzxXw3Nt4AT+BRWLJkHW2coGtbOUjYOKdwn6R+MXCyOd1EGrR6FiLsRdOtOZKGNGSL\nnhKVhMmm7OiG97xtA8ccS+Nly8J6FjMpno9tGKYCjjl2nrqXg1VoLA7edBqDAgK1MvB9HJZSAw/X\nvdHEI1TWxFGUDv57eX9LW1ipj4g0zLqUZ+LgIOH3wm2Xyw6zAVt8TGsLp+ORPrCyv+jQ0R09aDzN\nkTSkwX5USQi+UhVlrzr3UqKauSPHHEvjZYsj0G0drLsmJeA9TAUcs2gTpcc8xQTYQZjegVFAmlHd\n3OW+He8UenqUqrlEG0cGCT8LHdO/EyOWBt+T7Kj8zBtVWhFN3V/jO4Qn9FiaAbNFdEydWEHsPA0v\nQM0otxfV5mviGjtYGR5SUEdiGrXR6SX4e1DEwJ0jognoTK0g8TypyNT2oo9f+w15DxGItmfX8JCC\nVKlp5Ean8SuufTyoYuDOEdEEdCZWkHqeVGRqe9Fj29uBQOO6hocU5EtNc0hsgcM/EL8VVDFw54ho\nAjoTK0g9TyqyMbslKxBqTNfwkIJsqWnwve1DQQHD6RwRTUBsYgWp50lFRtuLAnFGdg0PKUiYmoZ2\negVFDN45IpqA0MQKUs+TimzObskKhBrTNTykIFtiGmejU1DGgJ0jogmoTK0g8TzpyJz9P4FYY7qG\nhxRkS0zjbHQKyhiwc0Q0AZWpFSSeJx2Zs/8nEGtM1/CQgmyJaZyNTkEZA3aOiCagMrWCxPOkI3vK\n7v8JxBrTNTykIFtimumO3QIX1DFY54hoAiJTK0g8TyKy/wOAmj5kfZ4VxwAAAABJRU5ErkJggg==\n",
       "text/latex": [
-       "$$\\frac{0.5}{h^{2}} p{\\left (- 2 h + x,y,- 2 h + z,t \\right )} - \\frac{0.5}{h^{2}} p{\\left (- 2 h + x,y,- h + z,t \\right )} - \\frac{0.5}{h^{2}} p{\\left (- h + x,y,- 2 h + z,t \\right )} + \\frac{0.5}{h^{2}} p{\\left (- h + x,y,- h + z,t \\right )} + \\frac{0.5}{h^{2}} p{\\left (h + x,y,h + z,t \\right )} - \\frac{0.5}{h^{2}} p{\\left (h + x,y,2 h + z,t \\right )} - \\frac{0.5}{h^{2}} p{\\left (2 h + x,y,h + z,t \\right )} + \\frac{0.5}{h^{2}} p{\\left (2 h + x,y,2 h + z,t \\right )}$$"
+       "$$\\frac{0.5}{h^{2}} p{\\left (x,y,z,t \\right )} - \\frac{0.25}{h^{2}} p{\\left (x,y,- h + z,t \\right )} - \\frac{0.25}{h^{2}} p{\\left (x,y,h + z,t \\right )} - \\frac{0.25}{h^{2}} p{\\left (- h + x,y,z,t \\right )} + \\frac{0.25}{h^{2}} p{\\left (- h + x,y,- h + z,t \\right )} - \\frac{0.25}{h^{2}} p{\\left (h + x,y,z,t \\right )} + \\frac{0.25}{h^{2}} p{\\left (h + x,y,h + z,t \\right )}$$"
       ],
       "text/plain": [
-       "0.5⋅p(-2⋅h + x, y, -2⋅h + z, t)   - -0.5⋅p(-2⋅h + x, y, -h + z, t)    - -0.5⋅p\n",
-       "─────────────────────────────── - ───────────────────────────────── - ────────\n",
-       "                2                                  2                          \n",
-       "               h                                  h                           \n",
+       "0.5⋅p(x, y, z, t)   - -0.25⋅p(x, y, -h + z, t)    - -0.25⋅p(x, y, h + z, t)   \n",
+       "───────────────── - ─────────────────────────── - ────────────────────────── -\n",
+       "         2                        2                            2              \n",
+       "        h                        h                            h               \n",
        "\n",
-       "(-h + x, y, -2⋅h + z, t)    0.5⋅p(-h + x, y, -h + z, t)   0.5⋅p(h + x, y, h + \n",
-       "───────────────────────── + ─────────────────────────── + ────────────────────\n",
-       "         2                                2                            2      \n",
-       "        h                                h                            h       \n",
+       " - -0.25⋅p(-h + x, y, z, t)    0.25⋅p(-h + x, y, -h + z, t)   - -0.25⋅p(h + x,\n",
+       " ─────────────────────────── + ──────────────────────────── - ────────────────\n",
+       "               2                             2                             2  \n",
+       "              h                             h                             h   \n",
        "\n",
-       "z, t)   - -0.5⋅p(h + x, y, 2⋅h + z, t)    - -0.5⋅p(2⋅h + x, y, h + z, t)    0.\n",
-       "───── - ─────────────────────────────── - ─────────────────────────────── + ──\n",
-       "                        2                                 2                   \n",
-       "                       h                                 h                    \n",
-       "\n",
-       "5⋅p(2⋅h + x, y, 2⋅h + z, t)\n",
-       "───────────────────────────\n",
-       "             2             \n",
-       "            h              "
+       " y, z, t)    0.25⋅p(h + x, y, h + z, t)\n",
+       "────────── + ──────────────────────────\n",
+       "                          2            \n",
+       "                         h             "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
